# tigerfix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  demo-32-pyelftools.py  install.py  install.sh  run  setup.py
examples/fac/: main.c  patch.c
examples/fac2/: main.c  patch.c
examples/print_prime/: Makefile  Makefile_dynamic  Makefile_static  README.MD  config  main.c  make.py  o-to-so.py  patch.c  patchgen.py  patchgen_copy.py
examples/struct/: main.c  patch.c
examples/test/: main.c  patch.c
include/: def.h
src/cli/: CMakeLists.txt  demo-readelf.py  main.cpp  main.py  patchgen.py
src/cli/utils/: fix.py  gen.py
src/lib/: CMakeLists.txt  patch.c
tfix/: fix.py  gen.py  install.py  main.py  root.py
tfix/include/: dev.h
tfix/lib/: patch.c
